syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";
option go_package="./;pb";

message UserRequest {
    string id = 1;
    string name = 2;
    int64 mobile = 3;
    string email = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
  }
  
  message UserResponse {
    string status = 1;
  }
  message EmptyMessage {
    
  }

service UserService {
    rpc CreateUser (UserRequest) returns (UserResponse) {};
    rpc GetUser (EmptyMessage) returns (UserRequest) {};
}  